--- a/video.css
+++ b/video.css
@@ -65,7 +65,7 @@ nav img{
 }
 .container{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
