--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ nav img{
 }
 .cover{
     background: url(https://img.freepik.com/free-vector/teacher-showing-correct-answer-phone-children-class-group-cartoon-girls-boys-using-tablets-laptops-table-classroom-flat-vector-illustration-education-technology-concept_74855-22049.jpg?w=826&t=st=1647944099~exp=1647944699~hmac=5872b4d4531e2e3ba0ac196a2a93a3758693099e9dacab0a12f3ebc0d1cab6a3);
-    height: 800px;
+    height: 550px;
     background-position: center;
     background-size: cover;
 }
@@ -60,13 +60,13 @@ nav img{
     padding: 50px 0px;
 }
 .cover h1{
-    margin-top: 10px;
+    margin-top: 0px;
     text-align: center;
     font-family: 'Black Han Sans', sans-serif;
     font-size: 70px;
-    color: #e55737;
-    text-shadow: black 3px 5px;
-    padding: 50px 0px 50px;
+    color:white;
+    text-shadow: black 7px 7px;
+    padding: 120px 0px 50px;
 }
 .container{
     display: flex;
