--- a/index.css
+++ b/index.css
@@ -13,14 +13,14 @@ body{
 }
 nav{
     height: 120px;
-    background-color: #2D3047;
+    background-color: white;
     display: flex;
     align-items: center;
     flex: 1;
 }           
 nav img{
-    width: 110px;
-    height: 89.375px;
+    width: 160px;
+    height: 60px;
     margin-left: 50px;
     margin-top: 15px;
     margin-bottom: 15px;
@@ -35,18 +35,18 @@ nav img{
     margin-right: 50px;
 }
 .nav-links li a{
-    color:white;
+    color:#652e8c;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 24px;
     font-weight: bold;
 }
 .nav-links li a:hover{
-    color:orangered;
+    color:#e31338;
     transition: 0.4s;
 }
 .cover{
-    background: url(https://img.freepik.com/free-vector/teacher-showing-correct-answer-phone-children-class-group-cartoon-girls-boys-using-tablets-laptops-table-classroom-flat-vector-illustration-education-technology-concept_74855-22049.jpg?w=826&t=st=1647944099~exp=1647944699~hmac=5872b4d4531e2e3ba0ac196a2a93a3758693099e9dacab0a12f3ebc0d1cab6a3);
-    height: 550px;
+    background: url(cover.jpg);
+    height: 800px;
     background-position: center;
     background-size: cover;
 }
@@ -56,17 +56,16 @@ nav img{
     background: white;
     align-items: center;
     justify-content: center;
-    color:darkcyan;
     padding: 50px 0px;
 }
 .cover h1{
-    margin-top: 0px;
+    margin-top: 10px;
     text-align: center;
     font-family: 'Black Han Sans', sans-serif;
     font-size: 70px;
-    color:white;
-    text-shadow: black 7px 7px;
-    padding: 120px 0px 50px;
+    color: #e31338;
+    text-shadow: black 3px 5px;
+    padding: 0px 0px 50px;
 }
 .container{
     display: flex;
@@ -77,18 +76,14 @@ nav img{
     box-sizing: border-box;
 }
 #about-container{
-    background: wheat;
-    color:darkcyan;
-    border: 5px solid darkcyan;
+    background: #eec4ea;
+    border: 5px solid #652E8C;
     border-radius: 10px;
     width: 1200px;
     height: max-content;
     padding: 20px;
     font-size: 24px;
-
 }
-
-
 .box{
     width: 320px;
     height: 400px;
@@ -96,7 +91,7 @@ nav img{
     padding:10px;
     border-radius: 20px;
     flex: 1;
-    border: 4px solid darkcyan;
+    border: 4px solid #652E8C;
     margin: 0px 20px;
     box-sizing: border-box;
 }
@@ -104,11 +99,11 @@ nav img{
 .box h2{
     font-size: 32px;
     margin: auto 0px;
-    color:orangered;
+    color:#e31338;
 }
 .box p{
     font-size: 16px;
-    color: darkcyan;
+    color: #80407f;
     font-weight: bold;
 }
 .box img{
@@ -133,35 +128,62 @@ nav img{
     border:none;
     width: 440px;
 }
-.project{
+.content{
     height: 700px;
-    background-color:wheat;
-    color:orangered;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     position: relative;
 }
+.content h1{
+    font-size: 56px;
+    font-family: 'Noto Sans', sans-serif;
+    margin: 0px 0px 50px;
+}
+#content-biodata{
+    background-color:#eec4ea;
+    color:#e31338;
+}
+#content-project{
+    background-color:#white;
+    color:#e31338;
+}
 #project-container{
     color:white;
     border-radius: 10px;
 }
-.project h1{
-    font-size: 56px;
-    font-family: 'Noto Sans', sans-serif;
-    margin-bottom: 20px;
+table,th,td{
+    border: 1px solid white;
+    border-collapse: collapse;
+    font-size: 18px;
+    background-color: #80407f;
+    color:#e31338;
+    padding: 10px;
+}
+td{
+    background-color: white;
+
+}
+th{
+    color: white;
+}
+#about-logo{
+    padding: 0px 0px 60px;
+}
+#about-logo img{
+    width: 200px;
 }
 .footer{
-    background-color: white;
+    background-color:#80407f;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 10px;
+    color: white;
 }
 .footer h1{
-    color:#2D3047;
     font-size: 32px;
 }
 .footer-logo{
@@ -175,5 +197,5 @@ nav img{
     padding: 10px;
 }
 #imglink{
-    width: 58px;
+    width: 56px;
 }
