--- a/project.css
+++ b/project.css
@@ -13,14 +13,14 @@ body{
 }
 nav{
     height: 120px;
-    background-color: #2D3047;
+    background-color: white;
     display: flex;
     align-items: center;
     flex: 1;
 }           
 nav img{
-    width: 110px;
-    height: 89.375px;
+    width: 160px;
+    height: 60px;
     margin-left: 50px;
     margin-top: 15px;
     margin-bottom: 15px;
@@ -35,38 +35,36 @@ nav img{
     margin-right: 50px;
 }
 .nav-links li a{
-    color:white;
+    color:#652e8c;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 24px;
     font-weight: bold;
 }
 .nav-links li a:hover{
-    color:orangered;
+    color:#e31338;
     transition: 0.4s;
 }
-
 .about{
     display: flex;
     flex-direction: column;
-    background: wheat;
+    background: white;
     align-items: center;
     justify-content: center;
-    color:darkcyan;
-    padding-bottom: 50px;
+    padding: 50px 0px;
 }
 .about h1{
     margin-top: 0px;
     text-align: center;
     font-family: 'Black Han Sans', sans-serif;
     font-size: 70px;
-    color:orange;
+    color:#e31338;
     text-shadow: black 3px 5px;
     padding: 50px 0px 50px;
 }
 .about h2{
     font-size: 48px;
     margin: 50px 0px;
-    color:white;
+    color:#e31338;
 }
 .container{
     display: flex;
@@ -75,16 +73,17 @@ nav img{
     justify-content: center;
     flex-wrap: wrap;
     box-sizing: border-box;
-    border: 3px dashed darkcyan;
+    text-align: center;
 }
 #about-container{
-    color:darkcyan;
-    border: 5px solid darkcyan;
+    background-image: linear-gradient(#eec4ea60,#eec4eaa2),url(cover.jpg);
+    border: 5px solid #652E8C;
     border-radius: 10px;
     width: 1200px;
     height: max-content;
     padding: 20px;
     font-size: 24px;
+    margin-bottom: 50px;
 }
 .box{
     display: flex;
@@ -92,10 +91,12 @@ nav img{
     align-items: center;
     justify-content: center;
     padding: 0px 40px;
+
 }
 #scratch, #python, #web{
-    background: white;
-    color:darkcyan;
+    border: 5px dashed #652E8C;
+    background: #eec4ea;
+    color:#80407f;
     width: 1200px;
     height: max-content;
     padding: 20px;
@@ -108,20 +109,20 @@ iframe{
     padding: 10px;
 }
 .container a{
-    color:darkcyan;
+    color:#80407f;
     text-decoration: none;
 }
 
 .footer{
-    background-color: white;
+    background-color:#80407f;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 10px;
+    color: white;
 }
 .footer h1{
-    color:#2D3047;
     font-size: 32px;
 }
 .footer-logo{
@@ -135,6 +136,5 @@ iframe{
     padding: 10px;
 }
 #imglink{
-    width: 58px;
+    width: 56px;
 }
-
