--- a/video.css
+++ b/video.css
@@ -13,14 +13,14 @@ body{
 }
 nav{
     height: 120px;
-    background-color: #2D3047;
+    background-color: white;
     display: flex;
     align-items: center;
     flex: 1;
 }           
 nav img{
-    width: 110px;
-    height: 89.375px;
+    width: 160px;
+    height: 60px;
     margin-left: 50px;
     margin-top: 15px;
     margin-bottom: 15px;
@@ -35,31 +35,29 @@ nav img{
     margin-right: 50px;
 }
 .nav-links li a{
-    color:white;
+    color:#652e8c;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 24px;
     font-weight: bold;
 }
 .nav-links li a:hover{
-    color:orangered;
+    color:#e31338;
     transition: 0.4s;
 }
-
 .about{
     display: flex;
     flex-direction: column;
     background: white;
     align-items: center;
     justify-content: center;
-    color:darkcyan;
-    padding-bottom: 50px;
+    padding: 50px 0px;
 }
 .about h1{
     margin-top: 0px;
     text-align: center;
     font-family: 'Black Han Sans', sans-serif;
     font-size: 70px;
-    color:orange;
+    color:#e31338;
     text-shadow: black 3px 5px;
     padding: 50px 0px 50px;
 }
@@ -70,59 +68,37 @@ nav img{
     justify-content: center;
     flex-wrap: wrap;
     box-sizing: border-box;
+    text-align: center;
 }
 #about-container{
-    background: wheat;
-    color:darkcyan;
-    border: 5px solid darkcyan;
+    background: #eec4ea;
+    border: 5px solid #652E8C;
     border-radius: 10px;
     width: 1200px;
     height: max-content;
     padding: 20px;
     font-size: 24px;
-
+    margin-bottom: 50px;
 }
 #about-container img{
     width: 350px;
     height: 350px;
     border-radius: 10px;
 }
-
-.box{
-    width: 320px;
-    height: 400px;
-    margin: 30px;
-    text-align: center;
-    padding:10px;
-    border-radius: 10px;
-    flex: 1;
-    border: 4px solid darkcyan;
+#about-container h2{
+    font-size: 32px;
+    margin: auto 0px;
+    color:#e31338;
 }
-.box h2{
-    font-size: 24px;
-    margin: 20px;
-    color:orangered;
-}
-.box p{
-    font-size: 16px;
-    color: orangered;
+#about-container h4{
+    font-size: 18px;
+    color: #80407f;
     font-weight: bold;
-}
-.box img{
-    width: 335px;
-    height: 200px;
-    position: relative;
-    border-radius: 20px;
-    bottom:6px;
-    right:7px;
-}
-#box-about{
-    border:none;
 }
 
 .video{
     height: 700px;
-    background-color:darkorange;
+    background-color:#d367cc;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -138,18 +114,24 @@ nav img{
     font-size: 56px;
     font-family: 'Noto Sans', sans-serif;
     padding-bottom: 20px;
+    color: #652E8C;
 }
-
+#about-logo{
+    padding: 0px 0px 60px;
+}
+#about-logo img{
+    width: 200px;
+}
 .footer{
-    background-color: white;
+    background-color:#80407f;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 10px;
+    color: white;
 }
 .footer h1{
-    color:#2D3047;
     font-size: 32px;
 }
 .footer-logo{
@@ -163,5 +145,5 @@ nav img{
     padding: 10px;
 }
 #imglink{
-    width: 58px;
+    width: 56px;
 }
